2025-04-11T00:52:28Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14393194104 # 610
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-11
* notice: last 14d: unq all: 3 11
* notice: prev accum: outdated-unq outdated-all / unq all: 503 896 / 512 905
* notice: next accum: outdated-unq outdated-all / unq all: 503 896 / 514 907
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2025-04-10]

2025-04-10T00:52:09Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14369869057 # 609
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-10
* notice: last 14d: unq all: 3 9
* notice: prev accum: outdated-unq outdated-all / unq all: 503 896 / 511 904
* notice: next accum: outdated-unq outdated-all / unq all: 503 896 / 512 905
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-04-09]

2025-04-09T00:52:14Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14346530591 # 608
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-09
* notice: last 14d: unq all: 3 8
* notice: prev accum: outdated-unq outdated-all / unq all: 503 896 / 510 903
* notice: next accum: outdated-unq outdated-all / unq all: 503 896 / 511 904
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-04-08]

2025-04-08T00:51:42Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14322590442 # 607