@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-04-11T00:52:28Z",
+  "timestamp" : "2025-04-12T00:51:41Z",
   "count_outdated" : 896,
   "uniques_outdated" : 503,
-  "count" : 907,
-  "uniques" : 514,
+  "count" : 908,
+  "uniques" : 515,
   "clones" : [
     {
       "timestamp": "2025-04-01T00:00:00Z",
@@ -85,6 +85,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-04-11T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
