@@ -1,5 +1,5 @@
 {
-  "count": 11,
+  "count": 12,
   "uniques": 3,
   "clones": [
     {
@@ -46,6 +46,11 @@
       "timestamp": "2025-04-10T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2025-04-11T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
