@@ -1,3 +1,12 @@
+2025-04-12T00:51:41Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14414468252 # 611
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-12
+* notice: last 14d: unq all: 3 12
+* notice: prev accum: outdated-unq outdated-all / unq all: 503 896 / 514 907
+* notice: next accum: outdated-unq outdated-all / unq all: 503 896 / 515 908
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-04-11]
+
 2025-04-11T00:52:28Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14393194104 # 610
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-11
